# Keychain_motion

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README.ru.md  sdkconfig.defaults
android_time_sync/: README.md  settings.gradle
android_time_sync/app/: build.gradle
components/adxl345/: CMakeLists.txt  adxl345.c
components/adxl345/include/: adxl345.h
components/board_config/: CMakeLists.txt
components/board_config/include/: board_config.h
components/breakout_game/: CMakeLists.txt  breakout_game.c
components/device_clock/: CMakeLists.txt  device_clock.c
components/flip_animation/: CMakeLists.txt  flip_animation.c
components/fluid_animation/: CMakeLists.txt  fluid_animation.c
components/i2c_bus/: CMakeLists.txt  i2c_bus.c
components/i2c_bus/include/: i2c_bus.h
components/idle_animation/: CMakeLists.txt  idle_animation.c  idle_animation_frames.inc
components/motion_detector/: CMakeLists.txt  motion_detector.c
components/motion_state/: CMakeLists.txt  motion_state.c
components/mpu6050/: CMakeLists.txt  mpu6050.c
components/oled_display/: CMakeLists.txt  font_5x7.h  oled_display.c
components/phone_sync/: CMakeLists.txt  phone_sync.c
components/step_counter/: CMakeLists.txt  step_counter.c
components/time_animation/: CMakeLists.txt  time_animation.c
docs/: 00_project_overview.md  01_esp_idf_project_structure.md  02_i2c_scanner.md  03_oled_display.md  04_adxl345.md  06_animation_engine.md  07_power_and_battery.md  11_2026_06_25_daily_changes.md  12_hardware_pin_map.md  ARCHITECTURE.md  HARDWARE.md
main/: CMakeLists.txt  main.c
(+19 files in other folders)
